Fixed a gap between featured banner and sidebar. I removed the reference to sidebar in responsive css and lowered the padding on the sidebar items. No changes to templates/page.tpl.php.

--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -81,6 +81,8 @@
 		padding: 0;
 	}
 
+	.front.sidebar-first .region-featured { margin: 0 auto } /* Fixes gap from #140 */
+
 	.region-live, .region-featured #block-block-15 {
 		margin: 1em auto;
 		width: 92%;
@@ -105,29 +107,17 @@
 		margin-bottom: 0;
 	}
 
-    .region-sidebar-first {
-        left: -100%;
-        width: auto;
-        height: 3000px;
-        z-index: 100;
-        -webkit-transition: left .3s ease-out;
-        -moz-transition: left .3s ease-out;
-        -ms-transition: left .3s ease-out;
-        -o-transition: left .3s ease-out;
-        transition: left .3s ease-out;
-    }
-
     .scheduleslide .region-sidebar-first {
         left: 0;
 	}
 
     .region-sidebar-first h2.block-title {
-        padding: 0 0 16px;
+        padding: 0;
         font-size: 13px;
     }
 
     .region-sidebar-first h3 {
-        margin: 0 0 24px;
+        margin: 0 0 7px;
     }
 
 	.region-sidebar-first .block:hover {
